--- a/Index.html
+++ b/Index.html
@@ -84,7 +84,7 @@
         <h3>🏛️ Deelnemers per gemeente</h3>
         <p>Klik op de bubbels om de details te zien</p>
         <p>De grootte duidt het aantal deelnemende gezinnen aan</p>
-        <p><strong>Total:</strong> <span id="total-count">0</span> services</p>
+        <p><strong>Total:</strong> <span id="total-count">0</span> gezinnen</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
@@ -211,23 +211,23 @@
                 <h4>Aantal deelnemers per gemeente</h4>
                 <div class="legend-item">
                     <div class="legend-circle" style="width: 25px; height: 25px; background-color: #8B0000;"></div>
-                    <span>30+ services</span>
+                    <span>30+ gezinnen</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-circle" style="width: 22px; height: 22px; background-color: #DC143C;"></div>
-                    <span>20-29 services</span>
+                    <span>20-29 gezinnen</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-circle" style="width: 19px; height: 19px; background-color: #FF4500;"></div>
-                    <span>15-19 services</span>
+                    <span>15-19 gezinnen</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-circle" style="width: 16px; height: 16px; background-color: #FF6347;"></div>
-                    <span>10-14 services</span>
+                    <span>10-14 gezinnen</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-circle" style="width: 13px; height: 13px; background-color: #FFA500;"></div>
-                    <span>5-9 services</span>
+                    <span>5-9 gezinnen</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-circle" style="width: 10px; height: 10px; background-color: #FFD700;"></div>
