--- a/Index.html
+++ b/Index.html
@@ -176,7 +176,7 @@
                 <div style="text-align: center; min-width: 150px;">
                     <h3 style="margin: 0 0 10px 0; color: #333; font-size: 16px;">${name}</h3>
                     <div style="font-size: 24px; font-weight: bold; color: ${getColor(data.count)};">${data.count}</div>
-                    <div style="color: #666; font-size: 12px; margin-top: 5px;">services/facilities</div>
+                    <div style="color: #666; font-size: 12px; margin-top: 5px;">gezinnen</div>
                 </div>
             `;
 
