--- a/Index.html
+++ b/Index.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="legend-item">
                     <div class="legend-circle" style="width: 10px; height: 10px; background-color: #FFD700;"></div>
-                    <span>1-4 services</span>
+                    <span>1-4 gezinnen</span>
                 </div>
             `;
             return div;
