modified:   dlnsrPerGemeente.html opacity of tile layer op 0.4

--- a/dlnsrPerGemeente.html
+++ b/dlnsrPerGemeente.html
@@ -175,7 +175,8 @@
 
         // Add tile layer
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '© OpenStreetMap contributors'
+            attribution: '© OpenStreetMap contributors',
+            opacity: 0.4
         }).addTo(map);
 
         // Color scale function
