modified:   dlnsrPerGemeente.html     modified:   from openstreetmap.org to openstreetmap.be for tile layer, added opacity setting.

--- a/dlnsrPerGemeente.html
+++ b/dlnsrPerGemeente.html
@@ -174,7 +174,7 @@
         const map = L.map('map').setView([51.05, 3.1], 10);
 
         // Add tile layer
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        L.tileLayer('https://{s}.tile.openstreetmap.be/{z}/{x}/{y}.png', {
             attribution: '© OpenStreetMap contributors',
             opacity: 0.4
         }).addTo(map);
