modified:   dlnsrPerGemeente.html aangepaste coördinaten

--- a/dlnsrPerGemeente.html
+++ b/dlnsrPerGemeente.html
@@ -131,9 +131,9 @@
                 return;
             }
             
-        // Municipality data with approximate coordinates (West Flanders region)
+        // Municipality data with corrected coordinates (West Flanders region)
         const municipalityData = {
-            'Ardooie': { count: 1, lat: 50.8975, lng: 3.0864 },
+            'Ardooie': { count: 1, lat: 50.976728, lng: 3.199116 }, // Corrected
             'Beernem': { count: 5, lat: 51.1347, lng: 3.3403 },
             'Blankenberge': { count: 15, lat: 51.3133, lng: 3.1317 },
             'Bredene': { count: 1, lat: 51.2489, lng: 2.9614 },
@@ -141,18 +141,18 @@
             'De Haan': { count: 1, lat: 51.2833, lng: 3.0333 },
             'De Panne': { count: 2, lat: 51.0978, lng: 2.5931 },
             'Diksmuide': { count: 3, lat: 51.0333, lng: 2.8667 },
-            'Ichtegem': { count: 21, lat: 51.0833, lng: 2.9833 },
+            'Ichtegem': { count: 21, lat: 51.0928306, lng: 3.0106116 }, // Corrected
             'Ieper': { count: 11, lat: 50.8503, lng: 2.8847 },
             'Ingelmunster': { count: 5, lat: 50.9167, lng: 3.2667 },
             'Izegem': { count: 9, lat: 50.9139, lng: 3.2167 },
             'Knokke-Heist': { count: 1, lat: 51.3500, lng: 3.2667 },
             'Koekelare': { count: 1, lat: 51.0908, lng: 2.9675 },
-            'Koksijde': { count: 1, lat: 51.1167, lng: 2.6333 },
-            'Kortemark': { count: 5, lat: 51.0167, lng: 3.0500 },
+            'Koksijde': { count: 1, lat: 51.1200, lng: 2.6367 },
+            'Kortemark': { count: 5, lat: 51.0272, lng: 3.0514 },
             'Kortrijk': { count: 1, lat: 50.8281, lng: 3.2648 },
             'Langemark-Poelkapelle': { count: 1, lat: 50.9167, lng: 2.9167 },
-            'Ledegem': { count: 1, lat: 50.8667, lng: 3.1167 },
-            'Lichtervelde': { count: 1, lat: 51.0333, lng: 3.1333 },
+            'Ledegem': { count: 1, lat: 50.8642, lng: 3.1311 },
+            'Lichtervelde': { count: 1, lat: 51.0311, lng: 3.1422 },
             'Menen': { count: 27, lat: 50.7972, lng: 3.1211 },
             'Moorslede': { count: 3, lat: 50.8833, lng: 3.0667 },
             'Oostende': { count: 16, lat: 51.2289, lng: 2.9181 },
@@ -162,9 +162,9 @@
             'Ronse': { count: 1, lat: 50.7494, lng: 3.6003 },
             'Tielt': { count: 2, lat: 51.0000, lng: 3.3333 },
             'Torhout': { count: 3, lat: 51.0669, lng: 3.1019 },
-            'Vleteren': { count: 1, lat: 50.8833, lng: 2.7000 },
+            'Vleteren': { count: 1, lat: 50.929707, lng: 2.732738 }, // Corrected
             'Wervik': { count: 2, lat: 50.7831, lng: 3.0397 },
-            'Wingene': { count: 16, lat: 51.0806, lng: 3.2783 },
+            'Wingene': { count: 16, lat: 51.05865, lng: 3.274799 }, // Corrected
             'Zonnebeke': { count: 2, lat: 50.8667, lng: 2.9833 },
             'Zuienkerke': { count: 1, lat: 51.2833, lng: 3.1833 }
         };
